Asn#4 Change Log: June 11, 2014:
--------------------------------

Removed the following methods from usage in the CreatePlayer class:
    getShootingPerformance();
    getTeamQQ();

Removed search methods from usage in the TestDriver class:
    searchPlayersByCurrentProvince()
    searchPlayersByLastNameRegex();

Added two Comparator methods to TestDriver:
    sortProvinceLastNameFirstName();
    sortPerformanceEarnings();
    
-------------------------------
Asn#3 Change Log: June 6, 2014:
-------------------------------

Moved the following methods from the CreateHelper class to Player class:
    searchPlayersByCurrentProvince();
    searchPlayersByLastNameRegex();
    printPlayers();
    
    This was done to maintain organization.
    
Rename CreateHelper class to CreatePlayer:
    This was changed to make it clear what the class does.
    
Created Enum Position:
    This describes the player positions on a curling team.
    
Added exceptions. Still needs lots of work