@@ -1,0 +1,5 @@
+firstName=Rockin
+lastName=Awesome
+currentProvince=TeamCanada
+shootingPerformance=100;
+moneyEarned=9999;
