@@ -1,3 +1,15 @@
+Asn#5 Change Log: June 19, 2014:
+--------------------------------
+
+Converted to Maven Project
+Created log4j.properties
+Created uberPlayer.properties
+Converted System.out statements to use log.info
+
+Class TestDriver now includes creates a player with setting loaded from uberPlayer.properties
+
+ 
+--------------------------------
 Asn#4 Change Log: June 11, 2014:
 --------------------------------
 
